# CMakeList.txt : CMake project for 01-int-type, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("01-int-type")

# Add source to this project's executable.
add_executable (01-int-type "01-int-type.cpp" "01-int-type.h")

# TODO: Add tests and install targets if needed.
